Dialog: if we already flipped it to appear below, shift it upwards instead

BUG: 511188
FIXED-IN: 6.5.5